src/objects/SSIP_Rule__c.object
<CustomObject>
    <description>Object stores all SSIP rule for the customers.</description>
    <fields>
        <fullName>Account_18_Digit_Id__c</fullName>
        <description>Records 18 digit Id. Mainly used for Duplicate Rule logic.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account 18 Digit Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master detail relationship to the account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SSIP Rule</relationshipLabel>
        <relationshipName>SSIP_Rule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country to which this rule is tied to</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_PO_Number__c</fullName>
        <description>If Rule is Funded then get the PO Number tied to the account&apos;s Fund, else take the PO Number tied to the rule.
Finally check if there is any First Order and if so refer the PO Number to the First Order.</description>
        <formula>IF((ISPICKVAL(Is_Funded__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Fund__c))), Account__r.Fund__r.PO_Reference_Number__c,
IF(NOT(ISBLANK(PO_Number__c)), PO_Number__c,
IF(NOT(ISBLANK(First_Order__c)), First_Order__r.PoNumber, null
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Payor__c</fullName>
        <description>If Rule is Funded then get the Payor tied to the account&apos;s Fund, else take the Payor tied to the rule.
Finally check if there is any First Order and if so refer the Payor to the First Order.</description>
        <formula>IF((ISPICKVAL(Is_Funded__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Fund__c))), Account__r.Fund__r.Payor__c,
IF((ISPICKVAL(Payor_Exist__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Payor__c))), Account__r.Payor__c,
IF(NOT(ISBLANK(First_Order__c)), First_Order__r.Payor__c, null
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Payor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Tax_Exempt_Flag__c</fullName>
        <description>If Rule has Fund associated then take tax exempt flag from Fund&apos;s Payor else
If Rule has Payor associated then take Payor&apos;s tax exempt flag else
If Rule has first order, which has Payor association then take Payor&apos;s tax exempt flag else
Take current account&apos;s exempt flag</description>
        <formula>IF((ISPICKVAL(Is_Funded__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Fund__c))), Account__r.Fund__r.Payor__r.Tax_Exempt__c,
IF((ISPICKVAL(Payor_Exist__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Payor__c))), Account__r.Payor__r.Tax_Exempt__c,
IF(NOT(ISBLANK(First_Order__c)) &amp;&amp; NOT(ISBLANK(First_Order__r.Payor__c)), First_Order__r.Payor__r.Tax_Exempt__c, Account__r.Tax_Exempt__c
)))</formula>
        <label>Effective Tax Exempt Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Tax_Registration_Number__c</fullName>
        <description>If Rule has Fund associated then take tax reg no from Fund&apos;s Payor else
If Rule has Payor associated then take Payor&apos;s tax reg no else
If Rule has first order, which has Payor association then take Payor&apos;s tax reg no else
Take current account&apos;s tax reg no</description>
        <formula>IF((ISPICKVAL(Is_Funded__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Fund__c))), Account__r.Fund__r.Payor__r.Tax_Registration_Number__c,
IF((ISPICKVAL(Payor_Exist__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Payor__c))), Account__r.Payor__r.Tax_Registration_Number__c,
IF(NOT(ISBLANK(First_Order__c)) &amp;&amp; NOT(ISBLANK(First_Order__r.Payor__c)), First_Order__r.Payor__r.Tax_Registration_Number__c, Account__r.Tax_Registration_Number__c
)))</formula>
        <label>Effective Tax Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>SSIP Rule</relationshipLabel>
        <relationshipName>SSIP_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Repeat_Order_Lead_Days__c</fullName>
        <inlineHelpText>Lead days for the first shipment</inlineHelpText>
        <label>First Repeat Order Lead Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Shipment_Date__c</fullName>
        <description>Date when the first shipment needs to happen for this Schedule. It cam be immediate or in the future and should fall between the Rule Start and End date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date should be within the Rule Start Date and Rule End Date (if applicable). This date is set with the first order is shipped. Setting this date will create the Schedules.</inlineHelpText>
        <label>First Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_In_Days__c</fullName>
        <description>Schedule interval between each shipments.</description>
        <label>Frequency (In Days)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Funded__c</fullName>
        <description>Set at the time of rule creation to denote if the Rule is Funded.</description>
        <inlineHelpText>This field should be marked true if the Order has Fund association. Fund associated to the customer account will be used for the Order.</inlineHelpText>
        <label>Is there a Fund?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This value will be associated to the Order. If the Order is Funded, the PO Number associated to the Fund will be chose when Order is created.</inlineHelpText>
        <label>PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = &apos;CH_SSIP_Rule&apos;, &apos;net30&apos;, &apos;net30&apos;)</defaultValue>
        <description>Payment terms that will be used to track the payment. The default value will be based on the country&apos; preference</description>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payor_Exist__c</fullName>
        <inlineHelpText>This field should be marked true if the Order has Payor association. Payor associated to the customer account will be used for the Order.</inlineHelpText>
        <label>Is there a Payor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceBookEntryId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PriceBookEntryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price book, which will filter out only SSIP Pricebooks</description>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>SSIP Rule</relationshipLabel>
        <relationshipName>SSIP_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SSIP Rule</relationshipLabel>
        <relationshipName>SSIP_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Product quantity populated based on the product that is chosen. Information is recorded in the pricebook entry level.</description>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Date when the contract can be renewed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date should be greater than or equal to today&apos;s date.</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_End_Date__c</fullName>
        <description>Date when the rule will end.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date should be greater than or equal to today&apos;s date. Setting this date will delete any open schedules past this date.</inlineHelpText>
        <label>Rule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Re_schedule_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Re-schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date when the rule will start. Defaulted to current date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSIP_Fund__c</fullName>
        <formula>If(ISPICKVAL(Is_Funded__c, &apos;True&apos;) || (NOT(ISBLANK( First_Order__c )) &amp;&amp; (NOT(ISBLANK( First_Order__r.Fund__c )))),
HYPERLINK(&quot;/&quot;+Account__r.Fund__c, Account__r.Fund__r.Name, &quot;_blank&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fund associated to the Account to which the Order will be created.</inlineHelpText>
        <label>Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSIP_Payor__c</fullName>
        <description>Payor associated to the Account to which the Order will be created.</description>
        <formula>If(ISPICKVAL(Is_Funded__c, &apos;True&apos;) || ISPICKVAL(Payor_Exist__c, &apos;True&apos;) || (NOT(ISBLANK( First_Order__c )) &amp;&amp; (NOT(ISBLANK( First_Order__r.Fund__c )) || NOT(ISBLANK( First_Order__r.Payor__c )))),
HYPERLINK(&quot;/&quot;+Account__r.Payor__c, Account__r.Payor__r.Name, &quot;_blank&quot;), &apos;&apos;)</formula>
        <inlineHelpText>Payor associated to the Account to which the Order will be created.</inlineHelpText>
        <label>Payor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Count__c</fullName>
        <description>Field holds the number of Schedules that can be created for this rule.</description>
        <inlineHelpText>Count determines how many schedules will be created at first for this Rule.</inlineHelpText>
        <label>Schedule Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List of all Ship To addresses tied to the customer.</description>
        <label>Shipping Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Address__c.Type__c</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>SSIP Rule</relationshipLabel>
        <relationshipName>SSIP_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <description>Shipping method will be constrained by Country</description>
        <inlineHelpText>Chosen value will be defaulted to all the schedules associated to this Rule.</inlineHelpText>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Shipping_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Active&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SSIP Rule</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSIP Rule</pluralLabel>
    <recordTypes>
        <fullName>AT_SSIP_Rule</fullName>
        <active>true</active>
        <label>AT SSIP Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_SSIP_Rule</fullName>
        <active>true</active>
        <description>SSIP Rule Recordtype for CH</description>
        <label>CH SSIP Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>GB_SSIP_Rule</fullName>
        <active>true</active>
        <description>SSIP Rule for GB</description>
        <label>GB SSIP Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>IE_SSIP_Rule</fullName>
        <active>true</active>
        <description>SSIP Rule for IE</description>
        <label>IE SSIP Rule</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Account_Fund_For_Funded_Rule</fullName>
        <active>true</active>
        <description>If Fund is selected for the Rule, check if the account has Fund associated.</description>
        <errorConditionFormula>AND(ISPICKVAL( Is_Funded__c, &apos;True&apos; ), ISBLANK( Account__r.Fund__c ))</errorConditionFormula>
        <errorMessage>Account does not have Fund association, please associate a Fund before enabling the Rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Primary_CC_Exist_For_CC_Pay_Term</fullName>
        <active>true</active>
        <description>If Payment Term is CC then the Primary CC should be associated to the customer</description>
        <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
    ISPICKVAL(Payment_Term__c, &apos;net0&apos;),  
    ISBLANK(Account__r.Primary_Credit_Card__c) 
)</errorConditionFormula>
        <errorMessage>Account does not have any Primary Credit Card associated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Be_Greater_Than_The_Start_Date</fullName>
        <active>true</active>
        <description>SSIP Rule End Date or Renewal date should be greater than the Rule Start Date</description>
        <errorConditionFormula>OR(Rule_End_Date__c &lt; Rule_Start_Date__c,
 Renewal_Date__c &lt; Rule_Start_Date__c)</errorConditionFormula>
        <errorMessage>&apos;Rule End Date&apos; or &apos;Renewal Date&apos; must be greater than the &apos;Rule Start Date&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Can_Not_Be_Less_Than_Today</fullName>
        <active>false</active>
        <description>If End Date or Renewal date changed then cannot select prior date than today</description>
        <errorConditionFormula>OR(Rule_End_Date__c &lt; TODAY(),
 Renewal_Date__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>&apos;Rule End Date&apos; or &apos;Renewal Date&apos; can&apos;t be less than Today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Shipment_Date_Between_Rule_Dates</fullName>
        <active>false</active>
        <description>First Shipment Date must fall between rule start date and rule end date</description>
        <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;), 
OR(
First_Shipment_Date__c &lt; Rule_Start_Date__c ,
AND(
NOT( ISBLANK( Rule_End_Date__c ) ) ,
First_Shipment_Date__c &gt; Rule_End_Date__c
))
)</errorConditionFormula>
        <errorMessage>&apos;First Shipment Date&apos; must fall between &apos;Rule Start Date&apos; and &apos;Rule End Date&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fund_Selection_Check</fullName>
        <active>true</active>
        <description>If the payment term is credit card or prepaid then the Fund is not applicable.</description>
        <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
    ISCHANGED( Is_Funded__c ), 
    ISPICKVAL(Is_Funded__c, &apos;True&apos;), 
    OR(ISPICKVAL( Payment_Term__c, &apos;net0&apos;), ISPICKVAL( Payment_Term__c, &apos;net-1&apos;))
)</errorConditionFormula>
        <errorMessage>Rule cannot be funded if the payment term is either Prepaid or Credit Card.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Term_Check</fullName>
        <active>true</active>
        <description>Payment Term Credit Card can be chosen if the customer is paying. Not applicable for Funded or Payors.</description>
        <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
NOT(ISBLANK(Effective_Payor__c)), ISPICKVAL( Payment_Term__c, &apos;net0&apos;))</errorConditionFormula>
        <errorMessage>Payment Term &apos;Credit Card&apos; cannot be chosen as there is a Payor association to the Rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payor_Selection_Check</fullName>
        <active>true</active>
        <description>If the payment term is credit card or prepaid then the Payor cannot be added.</description>
        <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
OR(ISCHANGED(Payor_Exist__c), ISCHANGED(Is_Funded__c)),
OR(ISPICKVAL(Payor_Exist__c, &apos;True&apos;), ISPICKVAL(Is_Funded__c, &apos;True&apos;)),
OR(ISPICKVAL( Payment_Term__c, &apos;net0&apos;), ISPICKVAL( Payment_Term__c, &apos;net-1&apos;))
)</errorConditionFormula>
        <errorMessage>Payor cannot be selected if the payment term either Prepaid or Credit Card.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Change_Is_Not_Allowed</fullName>
        <active>true</active>
        <description>Product is not changeable. You should cancel SSIP Rule and create new one for new Product.</description>
        <errorConditionFormula>ISCHANGED(Product__c)</errorConditionFormula>
        <errorMessage>Product is not changeable. You should cancel SSIP Rule and create new one for new Product.</errorMessage>
    </validationRules>
</CustomObject>